--- a/src/scss/shared/_footer.scss
+++ b/src/scss/shared/_footer.scss
@@ -58,13 +58,29 @@
   .item-list {
     text-decoration: none;
     color: $color-black;
+    position: relative;
+    width: fit-content;
 
     @media screen and (max-width: $lg-screen) {
       font-size: 1.6rem;
     }
 
-    &:hover {
-      font-weight: 500;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 0.2rem;
+      background-color: $color-black;
+      bottom: 0;
+      left: 0;
+      transform-origin: right;
+      transform: scaleX(0);
+      transition: transform 0.2s ease-in-out;
+    }
+
+    &:hover::before {
+      transform-origin: left;
+      transform: scaleX(1);
     }
   }
 
