--- a/src/scss/components/_hero-component-contact-page.scss
+++ b/src/scss/components/_hero-component-contact-page.scss
@@ -25,10 +25,6 @@
     border-radius: 3rem;
     color: $color-black;
     text-align: center;
-
-    @media screen and (max-width: $md-screen) {
-      margin: 0 2rem;
-    }
   }
 
   .img-info {
@@ -45,9 +41,24 @@
     a {
       text-decoration: none;
       color: $color-black;
+      position: relative;
 
-      &:hover {
-        text-decoration: underline;
+      &::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 0.2rem;
+        background-color: $color-black;
+        bottom: 0;
+        left: 0;
+        transform-origin: right;
+        transform: scaleX(0);
+        transition: transform 0.2s ease-in-out;
+      }
+
+      &:hover::before {
+        transform-origin: left;
+        transform: scaleX(1);
       }
     }
 
