--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -27,14 +27,9 @@
 
     @media screen and (max-width: $lg-screen) {
       width: auto;
-      padding: 5rem auto 0rem;
       background-color: $color-black-transp;
       border-radius: 3rem;
-      padding: 4rem;
-    }
-
-    @media screen and (max-width: $sm-screen) {
-      padding: 18rem auto 0rem;
+      padding: 2rem;
     }
   }
 
@@ -202,6 +197,8 @@
 
   @media screen and (max-width: $lg-screen) {
     gap: 3rem;
+    margin-top: 5rem;
+    padding: 0 2rem;
   }
 }
 
