--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -195,7 +195,7 @@ h6 {
     transition: 0.3s;
     gap: 4rem;
     z-index: 3;
-    box-shadow: 0 0.4rem 0.6rem -0.2rem #f4ce14;
+    box-shadow: 0 0.4rem 0.2rem -0.2rem #f4ce14;
   }
   .navigation-component .menu.active {
     left: 0;
@@ -995,15 +995,9 @@ body {
 @media screen and (max-width: 1024px) {
   .hero-component.contact-page-hero {
     width: auto;
-    padding: 5rem auto 0rem;
     background-color: rgba(39, 40, 41, 0.901);
     border-radius: 3rem;
-    padding: 4rem;
-  }
-}
-@media screen and (max-width: 768px) {
-  .hero-component.contact-page-hero {
-    padding: 18rem auto 0rem;
+    padding: 2rem;
   }
 }
 @media screen and (max-width: 1600px) {
@@ -1166,6 +1160,8 @@ body {
 @media screen and (max-width: 1024px) {
   .contact-page-hero-description {
     gap: 3rem;
+    margin-top: 5rem;
+    padding: 0 2rem;
   }
 }
 
@@ -2005,11 +2001,6 @@ body {
   color: #272829;
   text-align: center;
 }
-@media screen and (max-width: 992px) {
-  .container-info-contact .contact-info {
-    margin: 0 2rem;
-  }
-}
 .container-info-contact .img-info {
   max-width: 5rem;
   width: 100%;
@@ -2023,9 +2014,23 @@ body {
 .container-info-contact .important-info a {
   text-decoration: none;
   color: #272829;
+  position: relative;
 }
-.container-info-contact .important-info a:hover {
-  text-decoration: underline;
+.container-info-contact .important-info a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 0.2rem;
+  background-color: #272829;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.2s ease-in-out;
+}
+.container-info-contact .important-info a:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
 }
 @media screen and (max-width: 768px) {
   .container-info-contact .important-info {
@@ -2391,10 +2396,18 @@ body {
   border: 0.3rem solid #f4ce14;
 }
 .appointment-form .img-stylist {
-  width: 20rem;
-  height: 25rem;
+  max-width: 20rem;
+  width: 100%;
+  max-height: 25rem;
+  height: 100%;
   border-radius: 100rem;
   margin-bottom: 2rem;
+}
+@media screen and (max-width: 414px) {
+  .appointment-form .img-stylist {
+    max-width: 15rem;
+    max-height: 20rem;
+  }
 }
 .appointment-form .price-service {
   font-size: 1.8rem;
@@ -2406,6 +2419,9 @@ body {
   margin-bottom: 3rem;
   gap: 1rem;
   text-align: left;
+}
+.appointment-form .input-form {
+  width: 100%;
 }
 .appointment-form .icon {
   margin-right: 0.5rem;
