--- a/src/scss/components/_appointment.scss
+++ b/src/scss/components/_appointment.scss
@@ -35,9 +35,9 @@
   }
 
   h3 {
-    font-size: 3rem;
+    font-size: 2.8rem;
     text-align: center;
-    font-weight: 500;
+    font-weight: 600;
   }
 
   .appointment-form-container {
@@ -159,7 +159,7 @@
   }
 
   .form {
-    margin: 2rem 0;
+    margin: 4rem 0;
   }
 
   form {
@@ -199,7 +199,6 @@
     gap: 2rem;
     align-items: center;
     justify-content: center;
-    margin-top: 4rem;
 
     @media screen and (max-width: $sm-screen) {
       grid-template-columns: 1fr;
@@ -287,8 +286,16 @@
     text-align: left;
   }
 
-  .input-form {
-    width: 100%;
+  .date-time {
+    margin-left: 2rem;
+  }
+
+  input[type="date"],
+  input[type="time"] {
+    padding: 0 1.5rem;
+    width: 90%;
+    height: 4.5rem;
+    align-self: center;
   }
 
   .icon {
