--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -2422,6 +2422,16 @@ body {
 .appointment-form .date-time {
   margin-left: 2rem;
 }
+@media screen and (max-width: 768px) {
+  .appointment-form .date-time {
+    margin-left: 1rem;
+  }
+}
+@media screen and (max-width: 414px) {
+  .appointment-form .date-time {
+    margin-left: 0;
+  }
+}
 .appointment-form input[type=date],
 .appointment-form input[type=time] {
   padding: 0 1.5rem;
