--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -185,12 +185,12 @@ h6 {
   .navigation-component .menu {
     position: fixed;
     left: -100%;
-    top: 4rem;
+    top: 0;
     padding-bottom: 5rem;
     flex-direction: column;
     background-color: #272829;
     width: 100%;
-    border-radius: 10px;
+    border-radius: 0 0 1rem 1rem;
     text-align: center;
     transition: 0.3s;
     gap: 4rem;
