--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -418,7 +418,8 @@ header {
 }
 @media screen and (max-width: 768px) {
   header {
-    background-image: url("../../img/sections-img/hero-background-small-screen.png");
+    background-image: url("../../img/sections-img/hero-background-screen-small.png");
+    background-size: contain;
   }
 }
 header.contact {
