--- a/src/scss/shared/_container.scss
+++ b/src/scss/shared/_container.scss
@@ -8,7 +8,8 @@ header {
   }
 
   @media screen and (max-width: $sm-screen) {
-    background-image: url("../../img/sections-img/hero-background-small-screen.png");
+    background-image: url("../../img/sections-img/hero-background-screen-small.png");
+    background-size: contain;
   }
 
   &.contact {
